Fixed alignment of loader and logo on qr code

--- a/src/app/qr/qr/qr.component.css
+++ b/src/app/qr/qr/qr.component.css
@@ -35,10 +35,11 @@
 
 }
 .qrImage{
-  margin: 0 auto;
+  margin: auto;
   position: absolute;
   top: 37%;
   transform: translateY(-50%);
+  text-align: center;
 }
 
 h1{
@@ -140,6 +141,9 @@ h1{
   .stepDetails{
     font-size: 14px;
   }
+  .loader {
+    margin-left: 20%;
+  }
 }
 
 /*For screen size 481px and higher*/
@@ -147,8 +151,13 @@ h1{
   .stepDetails{
     font-size: 14px;
   }
+  .loader {
+    margin-left: 30%;
+  }
+
 
 }
+
 
 /*For screen size 641px and higher*/
 @media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
@@ -162,6 +171,7 @@ h1{
     margin-left: 30%;
   }
 }
+
 
 /*For screen size 992px and higher*/
 @media (min-width:992px) {
@@ -196,12 +206,12 @@ h1{
 
 /*For screen size 965px and lower*/
 @media (max-width:767px)  {
-  .container-fluid {
-  display: none;
-  }
-  .overlayMessage {
-    display: block;
-  }
+  /*.container-fluid {*/
+  /*display: none;*/
+  /*}*/
+  /*.overlayMessage {*/
+    /*display: block;*/
+  /*}*/
 }
 
 /*@media (min-width:700px)  {*/
@@ -211,10 +221,12 @@ h1{
 /*}*/
 
 /*For screen size 641px to 767px*/
-@media only screen and (min-width: 641px) and (max-width: 767px) {
+@media only screen and (min-width: 320px) and (max-width: 767px) {
   .qrImage {
     position: relative;
+    margin: auto;
   }
+
 }
 
 .getHelp{
